--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "fastify": "^4.21.0",
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "socket.io": "^4.7.5"
   },
   "engines": {
     "node": "14.x"
