--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.19.2",
     "fastify": "^4.21.0",
     "handlebars": "^4.7.8",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "express-rate-limit": "^6.11.2"
   },
   "engines": {
     "node": "14.x"
